--- a/form/form.css
+++ b/form/form.css
@@ -1,17 +1,40 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed|Sunflower:300');
 body {
-    background-color: #414a4c;
+    background-color: #003366;
     background-repeat: no-repeat;
     background-size: cover;
     font-family: sans-serif;
-    font-size: 10px
+    font-size: 10px;
+  }
+  .form-container {
+    width: 100%;
+    height: auto;
+    margin-top: 20px;
+  }
+  #form-info {
+    background-color: #eee;
+    border: 3px solid #ff7f50;
+    text-align: center;
+    font-size: 24px;
+    font-family: 'Sunflower', sans-serif;
+    width: 70%;
+    margin: 0 auto;
+  }
+  .form-container ul { 
+    list-style: none;
+    color: black;
+    margin: 0 auto;
+    font-size: .8em;
+    text-align: left;  
   }
   form, .output {
-    background: #fff;
+    background: white;
     padding: 4em 4em 2em;
     max-width: 400px;
     margin: 100px auto 0;
     box-shadow: 0 0 1em #222;
     border-radius: 5px;
+    border: 3px solid #ff7f50;
   }
   p {
     margin: 0 0 3em 0;
